# backend/api/v1/tag.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"backend/core/e"
 	"backend/core/response"
+	"backend/dto"
 	"backend/models"
 	"backend/services"
 	"strconv"
@@ -11,14 +12,14 @@ import (
 )
 
 // GetTag api
-// @tags Tags
+// @tags tag
 // @summary 根据id获取标签
 // @accept json
-// @produce  application/json
+// @produce  json
 // @param id path int true "id"
 // @success 200 {object} models.Tag string "{"code":0,"msg":"操作成功", "data":{}}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/id/{id} [GET]
+// @router /tag/id/{id} [get]
 func GetTag(c *gin.Context) {
 	var (
 		tag *models.Tag
@@ -40,13 +41,13 @@ func GetTag(c *gin.Context) {
 }
 
 // GetAllTags api
-// @tags Tags
+// @tags tag
 // @summary 获取所有的标签
 // @accept json
 // @produce  json
-// @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
+// @success 200 {object} []models.Category "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/all [GET]
+// @router /tag/all [get]
 func GetAllTags(c *gin.Context) {
 	tags, err := services.GetAllTags()
 	if err != nil {
@@ -56,14 +57,14 @@ func GetAllTags(c *gin.Context) {
 	response.SuccessResult(c, tags)
 }
 
-// GetTagsCount is
-// @Tags Tags
+// GetTagsCount api
+// @tags tag
 // @summary 获取标签总数
 // @accept json
 // @produce  json
 // @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/count [GET]
+// @router /tag/count [get]
 func GetTagsCount(c *gin.Context) {
 	count, err := services.GetTagsCount()
 	if err != nil {
@@ -73,18 +74,18 @@ func GetTagsCount(c *gin.Context) {
 	response.SuccessResult(c, count)
 }
 
-// CreateTag is
-// @Tags Tags
+// CreateTag api
+// @tags tag
 // @summary 创建标签
 // @accept json
 // @produce  json
-// @param row body services.TagModel false "row"
+// @param row body dto.CreateTagDTO false "row"
 // @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/add [POST]
+// @router /tag/add [post]
 func CreateTag(c *gin.Context) {
 	var (
-		newTag services.TagModel
+		newTag dto.CreateTagDTO
 		err    error
 	)
 
@@ -102,18 +103,18 @@ func CreateTag(c *gin.Context) {
 	response.SuccessResult(c, nil)
 }
 
-// UpdateTag is
-// @Tags Tags
+// UpdateTag api
+// @tags tag
 // @summary 编辑标签
 // @accept json
 // @produce  json
-// @param row body services.UpdateTagModel false "row"
+// @param row body dto.UpdateTagDTO false "row"
 // @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/update [PUT]
+// @router /tag/update [put]
 func UpdateTag(c *gin.Context) {
 	var (
-		updateTag services.UpdateTagModel
+		updateTag dto.UpdateTagDTO
 		err       error
 	)
 	err = c.ShouldBindJSON(&updateTag)
@@ -130,15 +131,15 @@ func UpdateTag(c *gin.Context) {
 	response.SuccessResult(c, nil)
 }
 
-// DeleteTag is
-// @tags Tags
-// @summary 根据id删除
+// DeleteTag api
+// @tags tag
+// @summary 根据id删除标签
 // @accept json
 // @produce  json
 // @param id path int true "id"
 // @success 200 {object} models.Tag string "{"code":0,"msg":"操作成功", "data":{}}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
-// @router /tag/delete/{id} [DELETE]
+// @router /tag/delete/{id} [delete]
 func DeleteTag(c *gin.Context) {
 	var (
 		id  uint64
